--- a/app/design/frontend/Webjump/theme-automotive/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Webjump/theme-automotive/Magento_Theme/layout/default.xml
@@ -11,5 +11,28 @@
 
         <referenceContainer name="header.panel" remove="true" />
         <move element="header.links" destination="header-wrapper" before="top.search"/>
+
+        <referenceContainer name="footer">
+            <container name='footer.links.wrapper' htmlTag='div' htmlClass='footer__links-wrapper'>
+                <block class="Magento\Cms\Block\Block" as='footer_links' before='-'>
+                    <arguments>
+                        <argument name='block_id' xsi:type='string'>footer-links-automotive</argument>
+                    </arguments>
+                </block>
+            </container>
+
+            <container name='footer.newsletter.social' htmlTag='div' htmlClass='footer__newsletter-social'>
+                <block class="Magento\Cms\Block\Block" as='footer_social_links' after='-'>
+                    <arguments>
+                        <argument name='block_id' xsi:type='string'>footer-social-links-automotive</argument>
+                    </arguments>
+                </block>
+            </container>
+        </referenceContainer>
+
+        <move element="form.subscribe" destination="footer.newsletter.social" before="-"/>
+
+        <referenceBlock name='footer_links' remove='true'/>
+        <referenceBlock name='copyright' remove='true'/>
     </body>
 </page>
