--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_colors.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_colors.less
@@ -1,7 +1,8 @@
 @smoke: #191818;
 @black: #000000;
-@white: #FFFFFF;
+@white: #ffffff;
 @grey: #707070;
 @light-grey: #cecaca;
+@dark-gray: #0f0f0f;
 @blue: #0d2b96;
 @light-blue: #006bb4;
