--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_extend.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_extend.less
@@ -5,4 +5,5 @@
 @import '_main.less';
 @import '_banner.less';
 @import '_grid.less';
-@import '_carousel.less';
+// @import '_carousel.less';
+@import '_footer.less';
