--- a/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
@@ -30,6 +30,7 @@
                 border-radius: 10px;
                 border: 1px solid @gray;
                 background-color: @white;
+                overflow: hidden;
             }
 
             .product-item-details {
