Fixing color price label

--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_carousel.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_carousel.less
@@ -38,6 +38,17 @@
         
                 .price-box{
                     .price-container{
+                        .price-label{
+                            font-family: 'Montserrat-Regular';
+                            color: @white;
+                            font-weight: 300;
+                            font-style: normal;
+                            font-size: 14px;
+                            text-align: center;
+                            line-height: normal;
+                            letter-spacing: 0.9px;
+                        }
+
                         .price-wrapper{
                              .price{
                                 font-family: 'Montserrat-Regular';
