--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_header.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_header.less
@@ -64,6 +64,7 @@
             white-space: nowrap;
             margin-top: 32px;
             margin-left: 132px;
+            position: relative;
 
             & > li {
                 margin: 0;
@@ -95,6 +96,58 @@
                 font-weight: 400;
                 display: inline-block;
                 cursor: default;
+            }
+
+            li.customer-welcome,
+            li.customer-welcome.active {
+                position: absolute;
+                right: -20px;
+                top: 1px;
+
+                & ~ li.link.authorization-link a::after {
+                    content: "";
+                }
+
+                .action.switch {
+                    color: @black;
+
+                    &::after {
+                        font-size: 12px;
+                    }
+                }
+
+                .customer-name.active{
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                }
+
+                &.active {
+                    .customer-menu {
+                        ul.header.links {
+                            display: flex;
+                            flex-direction: column;
+                            margin-top: 35px;
+                            position: absolute;
+                            right: -12px;
+
+                            li > a {
+                                font-family: "Montserrat-Regular";
+                                font-weight: 400;
+
+                                &::before {
+                                    content: "";
+                                }
+                            }
+
+                            .link.authorization-link {
+                                a::after {
+                                    content: "";
+                                }
+                            }
+                        }
+                    }
+                }
             }
 
             .greet.welcome {
