Update carousel color

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
@@ -57,6 +57,14 @@
                 }
 
                 .price-box {
+                    color: @purple;
+                    .minimal-price {
+                        color: @purple;
+                        .price-label {
+                            color: @purple;
+                        }
+                    }
+                    
                     .price-container {
                         .price-label {
                             color: @purple;
