Center text on party theme

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
@@ -44,6 +44,7 @@
                     width: 190px;
                     overflow: hidden;
                     height: 20px;
+                    margin: 5px auto;
                     a {
                         text-transform: uppercase;
                         color: @dark-gray;
