Fixing block position for bundle product

--- a/app/design/frontend/Webjump/theme-automotive/Magento_Catalog/templates/catalog/product/view/custompage.phtml
+++ b/app/design/frontend/Webjump/theme-automotive/Magento_Catalog/templates/catalog/product/view/custompage.phtml
@@ -6,5 +6,5 @@
 ?>
 
 <div class="custom-product-page">
-    <span class="title"><?= $escaper->escapeHtml(__('Installment in up to 10 installments with a minimum installment of $100.00.')) ?></span>
+    <span class="title"><?= $escaper->escapeHtml(__('Installment up to 10 times with minimum installment of $100.00')) ?></span>
 </div>
