--- a/app/design/frontend/Webjump/theme-party/Magento_Catalog/templates/catalog/product/view/custompage.phtml
+++ b/app/design/frontend/Webjump/theme-party/Magento_Catalog/templates/catalog/product/view/custompage.phtml
@@ -5,5 +5,5 @@
 ?>
 
 <div class="custom-product-page">
-    <span class="title"><?= $escaper->escapeHtml(__('Installment in up to 10 installments with a minimum installment of $10.00')) ?></span>
+    <span class="title"><?= $escaper->escapeHtml(__('Installment up to 10 times with minimum installment of $10.00')) ?></span>
 </div>
