Increase button font size party

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
@@ -95,6 +95,7 @@
                             border-radius: 10px;
                             color: @white;
                             font-family: "Poppins-Bold";
+                            font-size: 16px;
                         }
                     }
 
