--- a/app/design/frontend/Webjump/theme-party/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Webjump/theme-party/Magento_Theme/layout/default.xml
@@ -17,5 +17,39 @@
         </referenceBlock>
         <referenceBlock name="header" remove="true"/>
 
+
+        <referenceContainer name="footer">
+
+
+
+            <container name='footer.links.wrapper' htmlTag='div' htmlClass='footer__links-wrapper'>
+                <block class="Magento\Cms\Block\Block" as='footer_links' before='-'>
+                    <arguments>
+                        <argument name='block_id' xsi:type='string'>footer-links-party</argument>
+                    </arguments>
+                </block>
+            </container>
+
+            <container name='footer.newsletter.social' htmlTag='div' htmlClass='footer__newsletter-social'>
+                <block class="Magento\Cms\Block\Block" as='footer_social_links' after='-'>
+
+                </block>
+            </container>
+
+            <container name='footer.test' htmlTag='div' htmlClass='footer__test'>
+                <block class="Magento\Cms\Block\Block" as='footer_test' before='-'>
+                    <arguments>
+                        <argument name='block_id' xsi:type='string'>footer-social-links-party</argument>
+                    </arguments>
+                </block>
+            </container>
+
+        </referenceContainer>
+
+        <move element="form.subscribe" destination="footer.newsletter.social" before="-"/>
+
+        <referenceBlock name='footer_links' remove='true'/>
+        <referenceBlock name='copyright' remove='true'/>
+
     </body>
 </page>    
