Fix carousel theme party

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_carousel.less
@@ -16,6 +16,10 @@
         .slick-next.slick-arrow {
             position: static;
         }
+
+        .slick-list.draggable {
+            width: 100%;
+        }
     }
 
     .product-item {
