--- a/app/design/frontend/Webjump/theme-party/web/css/source/_menu.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_menu.less
@@ -3,12 +3,21 @@
 @menu-button-color: #6215e1;
 @submenu-color-hover: #531707;
 
+.sections.nav-sections{
+    margin-bottom: 0;
+}
 
 .section-item-content {
     background-color: @catalog-topnav-background-color;
 
     .navigation {
         background-color: @catalog-topnav-background-color;
+
+        .level0.parent>.level-top>.ui-menu-icon{
+            margin: 0;
+            padding: 0;
+            top: 8px;
+        }
 
         ul {
             li {
@@ -41,9 +50,6 @@
     }
 }
 
-.navigation .level0.parent>.level-top>.ui-menu-icon:after {
-    display: none;
-}
 
 @media (max-width: 767px) {
 
