Add some icon iteractions on theme automotive

--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_footer.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_footer.less
@@ -72,6 +72,10 @@
                     list-style: none;
                     display: flex;
                     gap: 26px;
+
+                    li:hover img{
+                        transform: scale(1.1);
+                    }
                 }
             }
 
