Hotfix color buttom add to wish list

--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
@@ -3,23 +3,31 @@
     .action.primary, 
     .action.tocart.primary,
     .action.primary.checkout,
-    .button.action.continue.primary{
+    .button.action.continue.primary,
+    .review-form .action.submit.primary,
+    .action.update,
+    .action.share,
+    .action.tocart {
         background: @smoke;
         border-color: @black;
+        color: @white;
 
         &:hover{
             background: @black;
             border-color: @black;
+            color: @white;
             transform: scale(1.03);
         }
 
         &:active{
             background: @smoke;
             border-color: @black;
+            color: @white;
         }
         &:focus{
             background: @smoke;
             border-color: @black;
+            color: @white;
         }
     }
 
