--- a/app/design/frontend/Webjump/theme-party/web/css/source/_footer.css
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_footer.css
@@ -8,7 +8,13 @@
   gap: 26px;
 }
 .footer__social-links ul li:first-child {
-  margin-top: -5px;
+  margin-top: 1px;
+}
+.footer__social-links ul li:nth-child(2) {
+  margin-right: 1px;
+}
+.footer__social-links ul li:nth-child(3) {
+  margin-top: 3.5px;
 }
 .footer__test {
   order: -1;
@@ -133,7 +139,7 @@
     margin-left: 28px;
   }
 }
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 1135px) {
   .page-footer .footer.content .block.newsletter {
     margin-bottom: 30px;
     width: 100%;
@@ -198,13 +204,14 @@
     justify-content: center !important;
   }
 }
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
+@media only screen and (min-width: 768px) and (max-width: 786px) {
   .footer__links-wrapper div {
     justify-content: left !important;
     flex-wrap: wrap;
   }
   .footer__links-wrapper .footer__links-container {
     flex-basis: 40%;
+    max-width: 200px !important;
   }
   .footer__links-wrapper .footer__links-container.links-account {
     order: 4;
@@ -222,29 +229,20 @@
     margin-left: 0px !important;
   }
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 787px) {
   .footer__links-wrapper {
     justify-content: space-evenly !important;
   }
   .footer__links-wrapper .footer__links-container.links-suport {
     margin-top: 90px !important;
-    margin-left: -200px !important;
-  }
-}
-@media only screen and (min-width: 1250px) {
-  .footer__links-wrapper {
-    justify-content: space-evenly !important;
-  }
-  .footer__links-wrapper .footer__links-container.links-suport {
-    margin-top: 90px !important;
-    margin-left: -300px !important;
+    margin-left: -47.5% !important;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 786px) {
   .footer__newsletter-social {
     width: 20%;
-    margin-left: -300px;
-    margin-block-start: 150px;
+    margin-left: -240px;
+    margin-block-start: 140px;
     margin-right: 90px;
   }
   .form.subscribe {
