--- a/app/design/frontend/Webjump/theme-party/web/css/source/_footer.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_footer.less
@@ -12,7 +12,15 @@
         gap: 26px;
 
         li:first-child {
-            margin-top: -5px;
+            margin-top: 1px;
+        }
+
+        li:nth-child(2) {
+            margin-right: 1px;
+        }
+
+        li:nth-child(3) {
+            margin-top: 3.5px;
         }
     }
 }
@@ -192,7 +200,7 @@
     }
 }
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 1135px) {
 
 
     .page-footer {
@@ -297,7 +305,7 @@
     }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
+@media only screen and (min-width: 768px) and (max-width: 786px) {
     .footer__links-wrapper {
         div {
             justify-content: left !important;
@@ -306,6 +314,7 @@
 
         .footer__links-container {
             flex-basis: 40%;
+            max-width: 200px !important;
         }
 
         .footer__links-container.links-account {
@@ -313,8 +322,6 @@
         }
 
     }
-
-
 
     .form.subscribe {
 
@@ -333,28 +340,14 @@
     }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 787px) {
     .footer__links-wrapper {
         justify-content: space-evenly !important;
 
 
         .footer__links-container.links-suport {
             margin-top: 90px !important;
-            margin-left: -200px !important;
-
-        }
-
-    }
-}
-
-@media only screen and (min-width: 1250px) {
-    .footer__links-wrapper {
-        justify-content: space-evenly !important;
-
-
-        .footer__links-container.links-suport {
-            margin-top: 90px !important;
-            margin-left: -300px !important;
+            margin-left: -47.5% !important;
 
         }
 
@@ -364,8 +357,8 @@
 @media only screen and (min-width: 768px) and (max-width: 786px) {
     .footer__newsletter-social {
         width: 20%;
-        margin-left: -300px;
-        margin-block-start: 150px;
+        margin-left: -240px;
+        margin-block-start: 140px;
         margin-right: 90px;
     }
 
