Fixing border radius buttom

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
@@ -59,6 +59,15 @@ body{
     }
 }
 
+.action.create.primary,
+.action.login.primary,
+.action.update,
+.action.action-login.secondary,
+.action.reload.captcha-reload,
+.action.submit.primary {
+    border-radius: 5px !important;
+}
+
 .modal-footer{
     .action-primary.action-accept{
         background: @menu-button-color;
