Display welcome message

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_header.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_header.less
@@ -26,7 +26,8 @@
                 .action.toggle:after,
                 .action.toggle:hover,
                 .action.toggle.active:hover:after {
-                    color: @header-text-color
+                    color: @header-text-color;
+                    line-height: 26px;
                 }
             }
         }
@@ -46,7 +47,7 @@
                 height: 22px;
                 color: @header-text-color;
                 font-family: 'Poppins-Regular';
-                font-size: 16px;
+                font-size: 13px;
                 font-weight: 400;
                 font-style: normal;
                 letter-spacing: normal;
@@ -57,9 +58,27 @@
                     color: @header-text-color;
                 }
             }
+
         }
     }
 }
+
+.customer-welcome {
+
+    .action.switch {
+        height: 22px;
+        color: @header-text-color;
+        font-family: 'Poppins-Regular';
+        font-size: 16px;
+        font-weight: 400;
+        font-style: normal;
+        letter-spacing: normal;
+        line-height: normal;
+        text-align: left;
+        color: @header-text-color;
+    }
+}
+
 
 .block-search {
     width: 400px;
