Changing the color of the review and payment icon

--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
@@ -64,6 +64,24 @@ body{
     }
 }
 
+.opc-progress-bar-item._active{
+    &::before{
+        background: @smoke;
+        border-color: @smoke;
+    }
+
+    span{
+        &::before{
+            background: @smoke;
+            border-color: @smoke;
+        }
+
+        &::after{
+            border-color: @smoke;
+        }
+    }
+}
+
 .product-info-main{
     .custom-product-page{
         margin-bottom: 20px;
