Removing welcome message not logged in

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_header.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_header.less
@@ -59,6 +59,10 @@
                 }
             }
 
+            .not-logged-in {
+                display: none;
+            }
+
         }
     }
 }
