--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_header.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_header.less
@@ -25,7 +25,7 @@
 
         .block.block-search {
             padding: 0;
-            width: 625px;
+            width: 525px;
             margin-top: 25px;
 
             .form {
@@ -63,7 +63,7 @@
             display: flex;
             white-space: nowrap;
             margin-top: 32px;
-            margin-left: 132px;
+            margin-left: 100px;
             position: relative;
 
             & > li {
@@ -209,7 +209,7 @@
     .page-header {
         .header {
             .block.block-search {
-                width: 525px;
+                width: 500px;
             }
         }
     }
@@ -219,7 +219,7 @@
     .page-header {
         .header {
             .block.block-search {
-                width: 430px;
+                width: 400px;
             }
         }
     }
@@ -228,12 +228,12 @@
 @media only screen and (max-width: 1024px) {
     .page-header {
         .header {
-            .block.block-search {
-                width: 514px;
-            }
+            // .block.block-search {
+            //     width: 500px;
+            // }
 
             &.links {
-                margin-left: 60px;
+                margin-left: 50px;
             }
 
             .minicart-wrapper {
@@ -243,21 +243,29 @@
     }
 }
 
+// @media only screen and (max-width: 998px) {
+//     .page-header {
+//         .header {
+//             .block.block-search {
+//                 width: 410px;
+//             }
+//         }
+//     }
+// }
+
 @media only screen and (max-width: 998px) {
     .page-header {
         .header {
             .block.block-search {
-                width: 430px;
+                width: 340px;
             }
-        }
-    }
-}
 
-@media only screen and (max-width: 910px) {
-    .page-header {
-        .header {
-            .block.block-search {
-                width: 360px;
+            &.links {
+                margin-left: 35px;
+            }
+
+            .minicart-wrapper {
+                margin-left: 25px;
             }
         }
     }
@@ -267,7 +275,7 @@
     .page-header {
         .header {
             .block.block-search {
-                width: 285px;
+                width: 265px;
             }
         }
     }
@@ -309,7 +317,7 @@
             }
 
             &.links {
-                margin-left: 50px;
+                margin-left: 40px;
 
                 li.customer-welcome,
                 li.customer-welcome.active {
