Hotfix color buttom and box checkout party

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
@@ -16,7 +16,10 @@ body{
 .action.tocart,
 .action.action-update,
 .action.action-login.secondary,
-.action.reload.captcha-reload {
+.action.reload.captcha-reload,
+.action.action-show-popup,
+.action.action-edit-address,
+.action.action-select-shipping-item {
     background: @menu-button-color;
     border-color: @menu-button-color;
     color: @catalog-topnav-text-color;
@@ -64,7 +67,12 @@ body{
 .action.update,
 .action.action-login.secondary,
 .action.reload.captcha-reload,
-.action.submit.primary {
+.action.submit.primary,
+.action.share,
+.action.tocart,
+.action.action-show-popup,
+.action.action-edit-address,
+.action.action-select-shipping-item {
     border-radius: 5px !important;
 }
 
