Remove icon menu party store

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_menu.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_menu.less
@@ -14,9 +14,9 @@
         background-color: @catalog-topnav-background-color;
 
         .level0.parent>.level-top>.ui-menu-icon{
-            margin: 0;
-            padding: 0;
-            top: 8px;
+            &::after{
+                content: '';
+            }
         }
 
         ul {
