--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
@@ -194,7 +194,9 @@
                     border-bottom: none;
 
                     li.greet.welcome {
-                        display: none;
+                        border-top: none;
+                        color:@white;
+                        font-size: 1.7rem;
                     }
 
                     li{
