--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
@@ -96,5 +96,8 @@ body{
 .product-info-main{
     .custom-product-page{
         margin-bottom: 20px;
+        font-family: 'Montserrat-Bold';
+        text-transform: uppercase;
+        font-size: 1.6rem;
     }
 }
