Fixing font info block party

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
@@ -86,5 +86,8 @@ body{
 .product-info-main{
     .custom-product-page{
         margin-bottom: 20px;
+        font-family: 'Poppins-Regular';
+        text-transform: uppercase;
+        font-size: 1.8rem;
     }
 }
