--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_footer.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_footer.less
@@ -76,6 +76,10 @@
                     li:hover img{
                         transform: scale(1.1);
                     }
+
+                    li a img[alt='twitter']{
+                        margin-top: 1.2px;
+                    }
                 }
             }
 
