--- a/app/design/frontend/Webjump/theme-party/web/css/source/_extend.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_extend.less
@@ -1,9 +1,10 @@
 @screen__m: 767px;
 
-@import '_header.less';
-@import '_typography.less';
-@import '_menu.less';
-@import '_banners.less';
-@import '_carousel.less';
-@import '_productpage.less';
-@import '_footer.less';
+@import "_header.less";
+@import "_typography.less";
+@import "_menu.less";
+@import "_banners.less";
+@import "_carousel.less";
+@import "_productpage.less";
+@import "_footer.less";
+@import "_catalog.less";
