--- a/app/design/frontend/Webjump/theme-party/web/css/source/_footer.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_footer.less
@@ -9,11 +9,8 @@
         margin-top: 50px !important;
         list-style: none;
         display: flex;
+        align-items: center;
         gap: 26px;
-
-        li:first-child {
-            margin-top: 1px;
-        }
 
         li:nth-child(2) {
             margin-right: 1px;
